test/corpus/02_feature_declaration.txt
=========================
basic feature declaration
=========================

feature something;

---

(source_file
  (statement
    (feature_statement
      (feature_keyword)
      (name_and_or_short_name
        (name
          (basic_name)
        )
      )
    )
  )
)

===================================
feature declaration with short name
===================================

feature <something>;

---

(source_file
  (statement
    (feature_statement
      (feature_keyword)
      (name_and_or_short_name
        (short_name
          (basic_name)
        )
      )
    )
  )
)

================================
unrestricted feature declaration
================================

feature 'something reall funny ++';

---

(source_file
  (statement
    (feature_statement
      (feature_keyword)
      (name_and_or_short_name
        (name
          (unrestricted_name)
        )
      )
    )
  )
)

================================================
unrestricted feature declaration with short name
================================================

feature <'something super&duper funny!'>;

---

(source_file
  (statement
    (feature_statement
      (feature_keyword)
      (name_and_or_short_name
        (short_name
          (unrestricted_name)
        )
      )
    )
  )
)

============================
feature don't need a name...
============================

feature;

---
(source_file
  (statement
    (feature_statement
      (feature_keyword)
    )
  )
)
