test/corpus/03_comments.txt
===================
single line comment
===================

// this is some text

---

(source_file
  (statement
    (comment)
  )
)

===================
multi-line comment
===================

/* this is some text!
 and this is the longer part... */

---

(source_file
  (statement
    (comment)
  )
)
